--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
         <a href="https://www.instagram.com/ccccmtt__4">CMT</a>
     </string>
     <string name="linktosite3">
-        <a href="https://www.instagram.com/">Jerome</a>
+        <a href="https://www.instagram.com/jkwan66">Jerome</a>
     </string>
     <string name="linktosite4">
         <a href="https://www.instagram.com/kayukkkkk/">Kayuk</a>
